# smith-waterman-fault-injection

./: .gitignore  README.md  install.sh  pyproject.toml  run_fi.sh
carol-fi/: .gitignore  64  6:*.wav=00;36:*.oga=00;36:*.opus=00;36:*.spx=00;36:*.xspf=00;36:  =ofzorzo  =xim  README.md  caiu_aq.txt  compare_matrix.py  dump  fault_injector.py  fault_injector_logHelper.py  output  putY  smith_waterman.conf  stats.sh  x86_64
carol-fi/convs/: Makefile  dft.c  dft2.c  dft2.conf  fft.conf  fft.cpp  linear.c  linear.conf
carol-fi/data/: Makefile  carolfi_output.c  carolfi_output.h  generate_input.c  input_synth.c  input_synth.h  malloc2d.c  malloc2d.h  read_input.c
carol-fi/scripts/: faultinj_parser.py
dup/: Makefile  README.md  answer  e3.py  output  run_fi.sh  smith_waterman.c  teste  teste3
dup/faultReport/: dup_crash.csv  dup_hang.csv  dup_sdc.csv  dup_summary.csv
dup/lastDataCreated/: randInputX  randInputY
original/: Makefile  outputComparer.py  random_strings.c  run_fi.sh  smith_waterman  smith_waterman.c  smith_waterman.conf
original/faultReport/: original_crash.csv  original_hang.csv  original_sdc.csv  original_summary.csv  scripts_crash.csv  scripts_hang.csv  scripts_sdc.csv  scripts_summary.csv
original/lastDataCreated/: goldOutput  randInputX  randInputY
seldup/: Makefile  caiu_aq.txt  dump  random_strings.c  run_fi.sh  shell_test.sh  smith_waterman.c  smith_waterman.conf
seldup/faultReport/: .~lock.seldup_summary.csv#  seldup_crash.csv  seldup_hang.csv  seldup_sdc.csv  seldup_summary.csv
seldup/lastDataCreated/: goldOutput  randInputX  (+1 more)
(+399 files in other folders)
